# energy_plus_wrapper

./: .gitignore  Makefile  Pipfile  README.md  README.rst  pylama.ini  pyproject.toml  readvars.audit  requirements.txt  setup.cfg  setup.py
energy_plus_wrapper/energyplus_wrapper/: main.py
energyplus_wrapper/: __init__.py  env_manager.py  runner.py  simulation.py  utils.py
energyplus_wrapper/energyplus_wrapper/: __init__.py  main.py
src/docker-energyplus/: Dockerfile  README.md
src/docker-energyplus/8.2.0/: Dockerfile
src/docker-energyplus/8.3.0/: Dockerfile
src/docker-energyplus/8.5.0/: Dockerfile
src/docker-energyplus/8.5.0/test/: in.idf
src/docker-energyplus/8.6.0/: Dockerfile
src/energyplus_wrapper/: __init__.py  main.py  run.py
tests/: eplus_run.py  eplusout.csv  in_8-4-0.idf  in_8-5-0.idf  in_8-7-0.idf  manual_run.py  readvars.audit  test_run.py
tests/EnergyPlus-8-4-0/: ExpandObjects  Rules8-3-0-to-8-4-0.xls  SetupOutputVariables.csv  changelog.html  energyplus  license.txt  readme.html  runenergyplus  uninstall.sh
tests/EnergyPlus-8-4-0/ExampleFiles/: ExampleFiles-ObjectsLink.html  ExampleFiles.html
tests/EnergyPlus-8-4-0/PostProcess/: HVAC-Diagram  ReadVarsESO
tests/EnergyPlus-8-4-0/PostProcess/convertESOMTRpgm/: convertESOMTR
tests/EnergyPlus-8-4-0/PreProcess/CalcSoilSurfTemp/: CalcSoilSurfTemp
tests/EnergyPlus-8-4-0/PreProcess/FMUParser/: parser
tests/EnergyPlus-8-4-0/PreProcess/GrndTempCalc/: Basement  Slab
tests/EnergyPlus-8-4-0/PreProcess/IDFVersionUpdater/: Transition-V7-2-0-to-V8-0-0  Transition-V8-0-0-to-V8-1-0  Transition-V8-1-0-to-V8-2-0  Transition-V8-2-0-to-V8-3-0  Transition-V8-3-0-to-V8-4-0
tests/EnergyPlus-8-4-0/PreProcess/ParametricPreProcessor/: parametricpreprocessor
