[tool.poetry]
name = "energyplus_wrapper"
version = "0.6.0"
description = "some usefull function to run e+ locally"
authors = ["Nicolas Cellier <contact@nicolas-cellier.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.5"
pandas = "^0.23.0"
"path.py" = "^11.0"

[tool.poetry.dev-dependencies]
pytest = "^3.5"
