[metadata]
name = energyplus_wrapper
description = Wrapper able to run energy-plus in parallel, directly from python.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = wrapper, energy-plus, building, energy
license = MIT
url = https://github.com/locie/energy_plus_wrapper
author = N. Cellier
author_email = contact@nicolas-cellier.net
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
version = 0.8.0

[options]
python_requires = >= 3.7
packages = find:
test_suite = tests
include_package_data = True
zip_safe = False
install_requires =
    pandas
    loguru
    plumbum
    attr
    requests
    path.py
    pexpect
    beautifulsoup4
    lxml
    coolname
    eppy
    fasteners

[options.extras_require]
docs =
    sphinx
    sphinx_rtd_theme
    sphinx_gallery
    nb2plots
    doc8
    seaborn

dev =
    pytest
    pylama
    pylint
    pre-commit
    pytest-coverage
    pytest-xdist

[check]
metadata = True

[flake8]
max-line-length = 88
doctests = True
max-complexity = 10
exclude = .git, .eggs, __pycache__, tests/, docs/, build/, dist/, _version.py

[tool:pytest]
addopts =
    --doctest-glob='*.md'
    --doctest-glob='*.rst'
    --cov energyplus_wrapper
    --cov-report term
    --cov-report html
    --cov-report xml:cov.xml
doctest_optionflags = NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL ELLIPSIS

[aliases]
test=pytest

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88
